test/kobra-code/semantic-errors/bad-break-statement.ks
$ x = 10

break

x = 2
